# todo-htmx

./: .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  docker-compose.yml  watch.sh
configuration/: base.yaml  production.yaml
migrations/: 20230820090854_create_tickets_table.sql  20230904160535_users.sql  20231028130019_users.sql  20231028130025_tickets.sql  20231108134536_add_timestamps.sql
scripts/: deploy.sh  init_db.sh
src/: configuration.rs  ctx.rs  error.rs  main.rs  models.rs  templates.rs
src/web/: home.rs  login.rs  logout.rs  mod.rs  mw_auth.rs  profile.rs  register.rs  root.rs  routes_home.rs  routes_login.rs  routes_static.rs  tickets.rs
static/: index.html  login.html  styles.css
static/login/: index.html
static/register/: index.html
templates/: base.html  edit_description.html  header_user.html  items.html  profile.html  start.html  ticket.html  ticket_card.html  ticket_create.html  ticket_row.html  tickets.html  tickets_list.html  tickets_table.html
tests/: test.rs
