[package]
name = "learn-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
async-trait = "0.1.73"
axum = "0.6.20"
config = "0.13.3"
lazy-regex = "3.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "sqlite"] }
strum_macros = "0.25.2"
tokio = { version = "1.31.0", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.3", features = ["fs"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }

[dev-dependencies]
httpc-test = "0.1"
